[package]
name = "bamboo-common-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-common-core-entities = { path = "entities" }
bamboo-common-core-error = { path = "error" }
