[package]
name = "bamboo-pandas-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common = { path = "../../common", features = ["backend"] }

actix-web = { workspace = true }
actix-web-lab = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rust-s3 = { workspace = true }
sea-orm = { workspace = true }
sentry = { workspace = true }
sentry-actix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }

[build-dependencies]
bamboo-common = { path = "../../common", features = ["core", "backend"] }

cargo_metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }