[package]
name = "bamboo-common-backend-mailing"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common-backend-services = { path = "../services" }
bamboo-common-core = { path = "../../core" }

lettre = { workspace = true }
log = { workspace = true }
