[package]
name = "bamboo-common-backend-mq"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-nats = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }