[package]
name = "bamboo-common-backend-services"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-common-core = { path = "../../core" }

actix-web = { workspace = true }
rust-s3 = { workspace = true }
sea-orm = { workspace = true }
log = { workspace = true }