[package]
name = "bamboo-common-core-entities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-common-core-error = { path = "../error" }
bamboo-common-backend-macros = { path = "../../backend/macros", optional = true }

bcrypt = { workspace = true }
chrono = { workspace = true }
color-art = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

actix-web = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }

strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[features]
backend = ["dep:actix-web", "dep:sea-orm", "dep:bamboo-common-backend-macros"]
frontend = ["dep:strum", "dep:strum_macros"]