[package]
name = "bamboo-frontend-base-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-frontend-base-storage = { path = "../storage" }

bamboo-error = { workspace = true }
gloo-net = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }