[package]
name = "bamboo-frontend-section-authentication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-frontend-base-api = { path = "../../base/api" }
bamboo-frontend-base-routing = { path = "../../base/routing" }
bamboo-frontend-base-storage = { path = "../../base/storage" }
bamboo-entities = { path = "../../../entities" }

either = { workspace = true }
log = { workspace = true }
stylist = { workspace = true }
yew = { workspace = true }
yew-cosmo = { workspace = true }
yew_icons = { workspace = true }
yew-hooks = { workspace = true }
yew-router = { workspace = true }